--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav text-uppercase ml-auto">
+        <ul class="navbar-nav ml-auto"> <!--text-uppercase-->
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#About">About</a>
@@ -51,7 +51,7 @@
             <a class="nav-link js-scroll-trigger" href="#Blog">Blogs</a>
           </li> 
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#Outreach">Outreach</a>
+            <a class="nav-link js-scroll-trigger" href="#Courses">Courses</a>
           </li>         
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
