--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
           
           <img class="rounded-circle img-fluid" src="img/courses/2.jpg" alt="">
 
-          <h6 class="service-heading">Data Base</h6>
+          <h6 class="service-heading">Database</h6>
           <p class="text-muted">Spring 2020</p>
         </div>
         <div class="col-md-3">
