--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 
 
   <!-- Courses -->
-  <section class="page-section" id="courses">
+  <section class="bg-light page-section" id="courses">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
