--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
         <div class="col-sm-4">
           <div class="team-member">
-            <a href="http://www.math.nsysu.edu.tw/~zhu/">
+            <a href="https://www.researchgate.net/profile/Xuding_Zhu">
             <img class="mx-auto rounded-circle" src="img/members/xu.jpeg" alt="">
                 <h4>Xuding Zhu</h4>
                 <p class="text-muted">Zhejiang Normal University</p></a>
