--- a/index.html
+++ b/index.html
@@ -148,8 +148,10 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading ">Research</h2>
-          <h3 class="section-subheading"> Current Projects </h3> <!--text-muted-->
+          <h3 class="section-subheading text-muted"> Current Projects</h3> <!--text-muted-->
         </div>
+        <br>
+        <br>
         <div class="col-lg-12">
           <p><font size="4" face="verdana">Graph Neural Networks (GNNs) have received increasing attention due to their superior performance in many node and graph classification tasks. GNNs are neural networks that take graphs as inputs. These models operate on the relational information of data to produce insights not possible in other neural network architectures and algorithms.
             <br>Graphs are a ubiquitous data structure and a universal language for describing complex systems. In the most general view, a graph is simply a collection of objects (i.e., nodes), along with a set of interactions (i.e., edges) between pairs of these objects. For example, to encode a social network as a graph we might use nodes to represent individuals and use edges to represent that two individuals are friends. In the biological domain, we could use the nodes in a graph to represent proteins, and use the edges to represent various biological interactions.
